fixing spacing on features

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ figure {
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 40px;
-  margin-inline-end: 40px;
   unicode-bidi: isolate;
 }
 
@@ -65,6 +64,7 @@ h2 {
 .row__narrow {
   width: 100%;
   margin: 0, auto;
+  max-width: 1024px;
 }
 
 .section__title {
@@ -284,6 +284,7 @@ header {
 }
 
 .header__email--input {
+  text-align: left;
   width: 100%;
   border-radius: 500px;
   border: 2px solid rgba(229, 231, 235);
@@ -341,10 +342,6 @@ header {
   align-items: center;
 }
 
-/*.section__title {
-  text-align: center;
-}*/
-
 .section__para {
   text-align: center;
   max-width: 576px;
@@ -352,6 +349,7 @@ header {
 
 .feature {
   width: calc(100% / 3);
+  max-width: 1024px;
 }
 
 .feature__row {
